# gensonnet-rs

./: .gitignore  .jsonnet-gen.yaml  Cargo.toml  LICENSE  README.md  cspell.config.yaml  justfile
.github/: README-WORKFLOWS.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  release.yml  test-matrix.yml
book/: .gitignore  README.md  build.sh  config.dev.toml  config.prod.toml  config.toml  dev.sh  switch-config.sh
book/content/: _index.md
book/content/api/: _index.md
book/content/examples/: _index.md
book/content/getting-started/: _index.md
book/content/plugins/: _index.md  external-plugins.md  go-ast-generator.md  openapi-generator.md
book/static/css/: main.css
book/static/js/: main.js
book/templates/: index.html  page.html
book/themes/gensonnet-docs/: config.toml  theme.toml
book/themes/gensonnet-docs/static/css/: main.css
book/themes/gensonnet-docs/templates/: base.html  index.html  page.html
crates/crd/: Cargo.toml
crates/crd/src/: lib.rs  parser.rs  schema.rs  types.rs
crates/generator/: Cargo.toml
crates/generator/src/: config.rs  crd.rs  generator.rs  lib.rs  result.rs  validation.rs
crates/lockfile/: Cargo.toml
crates/lockfile/src/: lib.rs  lockfile.rs  manager.rs  types.rs
crates/plugin/: Cargo.toml  README.md
crates/plugin-ast/: Cargo.toml  README.md
crates/plugin-ast/src/: lib.rs  parser.rs  types.rs  visitor.rs
crates/plugin/src/: lib.rs
crates/plugin/src/traits/: generator.rs  mod.rs  processor.rs  validator.rs
docs/: external-plugins.md  go-ast-generator.md  openapi-generator.md
examples/: dry-run-test.yaml  go-ast-config.yaml  istio-crds.yaml  openapi-config.yaml  plugin-example.go  plugin-manifest.yaml  sample-crd.yaml
examples/ast-go/: go-ast-test-suite.yaml
examples/ast-go/src/: sample-go-types.go
examples/crds/: istio-crds.yaml  opentelemetry-operator.yaml
examples/openapi/: sample-openapi.yaml
plugins/: README.md
plugins/crd/: factory.rs  mod.rs  plugin.rs  tests.rs
plugins/go-ast/: Cargo.toml  factory.rs  mod.rs  parser.rs  plugin.rs  tests.rs
plugins/openapi/: Cargo.toml  factory.rs  mod.rs  parser.rs  plugin.rs  tests.rs
src/: git.rs  lib.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: cleanup.rs  generate.rs  incremental.rs  info.rs  init.rs  lock.rs  mod.rs  plugins.rs  status.rs  test.rs  validate.rs
src/config/: config.rs  core.rs  generation.rs  mod.rs  plugins.rs  source.rs  tests.rs
src/crd/: mod.rs
src/generator/: mod.rs
src/git/: mod.rs
src/lockfile/: mod.rs
src/plugin/: mod.rs
src/plugin/ast/: Cargo.toml  factory.rs  mod.rs  parser.rs  plugin.rs  tests.rs  types.rs
src/plugin/crd/: Cargo.toml  factory.rs  mod.rs  plugin.rs  tests.rs
src/plugin/openapi/: factory.rs  mod.rs  parser.rs  plugin.rs  tests.rs  types.rs
src/plugin/registry/: README.md  mod.rs
src/plugin/testing/: mod.rs
src/plugin/traits/: generator.rs  lifecycle.rs  mod.rs  processor.rs  tests.rs  validator.rs
src/utils/: mod.rs
test-data/: test-crd-plugin.yaml  test-crd.yaml
tests/: cleanup_dry_run_test.rs  crd_plugin_test.rs  external_plugin_discovery_test.rs  integration_test.rs  test_command_test.rs
