[package]
name = "jsonnet-gen"
version = "0.1.0"
edition = "2021"
authors = ["Jsonnet Generator Team"]
description = "A CLI tool for generating type-safe Jsonnet libraries from schema sources"
license = "MIT"
repository = "https://github.com/goedelsoup/gensonnet-rs"
keywords = ["jsonnet", "kubernetes", "crd", "code-generation", "cli"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system and directories
dirs = "5.0"
walkdir = "2.4"

# Git operations
git2 = "0.18"

# HTTP client for future use
reqwest = { version = "0.11", features = ["json"], optional = true }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
glob = "0.3"
shellexpand = "3.1"
html-escape = "0.2"

# Tree-sitter for Go AST parsing
tree-sitter = "0.20"
tree-sitter-go = "0.20"

# Testing
tempfile = "3.8"
assert_fs = "1.1"
predicates = "3.0"
rstest = "0.18"
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "jsonnet-gen"
path = "src/main.rs"

[features]
default = []
http = ["reqwest"]
